
.. py:currentmodule:: tables

Changes from 2.4 to X.Y.Z (in development)
==========================================

New features
------------

- Basic support for HDF5 drivers.  Now it is possible to open/create an
  HDF5 file using one of the SEC2, DIRECT, LOG, WINDOWS, STDIO or CORE
  drivers and also set the main parameters (closes :issue:`166`).
  Thanks to Michal Slonina.

API changes
-----------

Many deprecated features and support for obsolete modules has been dropped:

- The deprecated :data:`is_pro` module constant has been removed

- The nra module and support for the obsolete numarray module has been removed.
  The *numarray* flavor is no more supported as well (closes :issue:`107`).

- Support for the obsolete Numeric module has been removed.
  The *numeric* flavor is no more available (closes :issue:`108`).

- The tables.netcdf3 module has been removed (closes :issue:`68`).

- The :data:`parameters.MAX_THREADS` configuration parameter has been dropped
  in favour of :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).

- The `__version__` module constants has been removed from almost all the
  modules (it was no ore used after the switch to Git).
  Of course the package level constant (:data:`tables.__version__`) still
  remains.  Closes :issue:`112`.


Bugs fixed
----------

- Better check access on closed files (closes: _issue:`62`)


Changes from 2.3.1 to 2.4
=========================

New features
------------

- Improved HDF5 error logging management:

  * added a new function, :func:`silenceHDF5Messages`, for suppressing
    (and re-enabling) HDF5 messages.  By default HDF5 error logging is now
    suppressed. Closes :issue:`87`.
  * now all HDF5 error messages and trace-backs are trapped and attached to
    the :exc:`exceptions.HDF5ExtError` exception instances.
    Closes :issue:`120`.

- Added support for the float16 data type.  It is only available if numpy_